# IC-HACK-BackEnd

./: .gitignore  0_temp_code.py  App.tsx  Component1.tsx  Component2.tsx  Component3.tsx  Component4.tsx  Component5.tsx  Component6.tsx  code_gen_test.py  combined_scenes.py  pyproject.toml  run.sh  scene_0_temp_code.py  scene_1_temp_code.py  scene_2_temp_code.py  scene_3_temp_code.py  scene_4_temp_code.py  scene_planner_test.py  temp_code.py  test_dry_run.py  test_react_orchestrator.py  test_temp_code.py  test_video_render.py  video_orchestrator_test.py
copy/: prompts.py
media/Tex/: 00a939a3c4634abc.tex  019ea31b4883ff74.tex  01e45ad5e40d8569.tex  0201af0307b96446.tex  031eb7d233fa9fc5.tex  05cd624c6dde9321.tex  05f7956ec6053b82.tex  066eb12bc8dd4885.tex  06bc5864119cd658.tex  07745491bc040e87.tex  07e4d8c18c9b3235.tex  0a304d5bc17e50f6.tex  0abc9bbff7d8c8a2.tex  0affed4c88e80754.tex  0c6c870dac0efe43.tex  0c9c50cf1206cb50.tex  0d2ee96d50bf81a4.tex  0da4a5ba4b961a25.tex  0dac515d22f78453.tex  104222208fa15f60.tex  118b5a0e7dfc23ea.tex  11f10d5d7e1b3314.tex  12803201a42dffff.tex  134fa01ded930192.tex  142d6c8e909b6076.tex  151754d9b4fef42a.tex  153c019533494c68.tex  15c859ed5b4c19e0.tex  162450c1d26d0bf2.tex  16553952669176b2.tex  17f5ef89b6fbb73a.tex  18a842b3b9141cef.tex  18c32102a987fa6e.tex  1901305e66b1a838.tex  1a45bbafc1763d51.tex  1a593d71a583751f.tex  1a925a2966de5725.tex  1b03a0eb499f98e3.tex  1b202e45105f4ef3.tex  1b520bfc191b42ee.tex  (+392 more)
media/videos/combined_scenes/720p30/: CombinedScene.srt
media/videos/combined_scenes/720p30/partial_movie_files/CombinedScene/: partial_movie_file_list.txt
media/videos/scene_0_temp_code/480p15/partial_movie_files/IntroductionToVectors/: partial_movie_file_list.txt
media/voiceovers/: cache.json
server/: main.py  models.py  worker.py
server/routes/: vide_gen.py  video_gen.py
server/video_storage/: storage.py
src/: App.tsx  Component1.tsx  Component2.tsx  Component3.tsx  Component4.tsx  Component5.tsx  Component6.tsx  code_generator.py  combined_scenes.py  llm_provider.py  main.py  models.py  prompts.py  react_orchestrator.py  scene_0_temp_code.py  scene_1_temp_code.py  scene_2_temp_code.py  scene_3_temp_code.py  scene_4_temp_code.py  scene_planner.py  test_video_render.py  utils.py  video_orchestrator.py  worker.py
src/common/: db.py  pinecone_store.py  pinecone_test.py
src/routes/: vector.py  video.py  video_gen.py
src/scenes/: scene_0_temp_code.py  scene_1_temp_code.py  scene_2_temp_code.py  scene_3_temp_code.py  scene_4_temp_code.py
src/video_storage/: storage.py
(+1 files in other folders)
