[project]
name = "manimgeneration"
version = "0.1.0"
description = ""
authors = [
    { name = "Ruthvik Konduru", email = "114494803+BRKon123@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (>=0.3.17,<0.4.0)",
    "langgraph (>=0.2.68,<0.3.0)",
    "langchain-anthropic (>=0.3.5,<0.4.0)",
    "langsmith (>=0.3.3,<0.4.0)",
    "python-dotenv (>=0.21.0,<0.22.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "manim (==0.18.1)",
    "boto3 (>=1.36.11,<2.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "manim-voiceover[azure] (>=0.3.7,<0.4.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "pinecone (>=5.4.2,<6.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "sox (>=1.5.0,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
